# GhostDesk

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.base.dockerignore  LICENSE  PROMPT.md  README.md  SECURITY.md  SMALL_MODEL_PROMPT.md  SYSTEM_PROMPT.md  SYSTEM_PROMPT_SMALL_MODEL.md  glama.json  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  Dockerfile.dockerignore  devcontainer.json  docker-compose.yml  supervisor.conf  sway-env.sh
.devcontainer/s6/cont-init.d/: 00-service-env.sh  01-runtime-dir.sh  02-sway-config.sh  03-uv-sync.sh
.docker/: entrypoint.sh  setup-desktop.sh  start-openbox.sh  supervisor.conf  tint2rc
.docker/shared/: init-container.sh  start-openbox.sh
.github/workflows/: docker.yml
docker/: entrypoint.sh  health  mcp-run.sh  supervisord.conf  sway.config
docker/base/: Dockerfile  Dockerfile.dockerignore
docker/base/patches/: wayvnc-async-auth.patch
docker/init/: entrypoint.sh  healthcheck.sh
docker/profile/: sway-env.sh
docker/services/foot/: foot.ini
docker/services/mako/: run.sh
docker/services/mcp/: run.sh
docker/services/novnc/: index.html
docker/services/sway/: config
docker/services/websockify/: run.sh
docker/shell/: bashrc-prompt.sh  sway-env.sh
docker/supervisor/: supervisord.conf
docker/supervisor/conf.d/: 10-dbus.conf  20-sway.conf  30-mako.conf  40-wayvnc.conf  50-websockify.conf  60-mcp.conf
src/ghostdesk/: _atspi.py  _cmd.py  _coords.py  _cursor.py  _icons.py  _lifespan.py  _logging.py  _middleware.py  instructions.py  roles.py  server.py
src/ghostdesk/apps/: __init__.py  _desktop.py  app_launch.py  app_list.py  app_status.py
src/ghostdesk/atspi/: __init__.py  __main__.py  _helpers.py  _roles.py  _tree.py  cmd_details.py  cmd_elements.py  cmd_find.py  cmd_focus.py  cmd_focused.py  cmd_read.py  cmd_scroll.py  cmd_set_value.py  cmd_table.py  cmd_text.py
src/ghostdesk/clipboard/: __init__.py  clipboard_get.py  clipboard_set.py  get.py  set_.py
src/ghostdesk/input/: __init__.py  _wayland.py  feedback.py  humanizer.py  keyboard.py  mouse.py
src/ghostdesk/prompts/: __init__.py  system_prompt.py
src/ghostdesk/resources/: __init__.py  apps.py  clipboard.py
src/ghostdesk/screen/: __init__.py  _shared.py  annotations.py  annotator.py  capture.py  cursor.py  detector.py  grounding.py  overlay.py  reader.py  rulers.py  screen_shot.py  windows.py
src/ghostdesk/shell/: __init__.py  launch.py  process_status.py  wait.py
src/ghostdesk/tools/: accessibility.py  keyboard.py  mouse.py  screenshot.py  shell.py
src/ghostdesk/utils/: atspi_query.py  clickables.py  cmd.py  cursor_overlay.py  humanizer.py  window_info.py  windows.py  xdotool.py
tests/: conftest.py
tests/ghostdesk/: test_cmd.py  test_cursor.py  test_icons.py  test_lifespan.py  test_logging.py  test_middleware.py  test_roles.py  test_server.py
tests/ghostdesk/apps/: test_app_launch.py  test_app_status.py  test_desktop.py
tests/ghostdesk/clipboard/: test_clipboard_get.py  test_clipboard_set.py  test_get.py  test_set.py
tests/ghostdesk/input/: test_feedback.py  test_humanizer.py  test_keyboard.py  test_mouse.py  test_wayland.py
tests/ghostdesk/prompts/: test_system_prompt.py
tests/ghostdesk/resources/: test_apps.py  test_clipboard.py
tests/ghostdesk/screen/: test_cursor_overlay.py  test_screen.py  test_screen_shot.py  test_shared.py  test_windows.py
tests/ghostdesk/shell/: test_launch.py  test_process_status.py
tests/ghostdesk/utils/: test_cmd.py  test_cursor_overlay.py  test_humanizer.py  (+1 more)
(+41 files in other folders)
