[project]
name = "ghostdesk"
version = "2.0.0"
description = "MCP server to control a virtual Linux desktop from an LLM agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Yoann Vanitou", email = "yvanitou@gmail.com" },
]
keywords = ["mcp", "desktop", "automation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]>=1.0",
    "Pillow>=10.0",
]

[project.scripts]
ghostdesk = "ghostdesk.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghostdesk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ghostdesk"]

[tool.coverage.report]
show_missing = true
skip_empty = true
